vox scales fixes on mobile

--- a/public/scss/vox-questionnaries.scss
+++ b/public/scss/vox-questionnaries.scss
@@ -983,6 +983,19 @@ $main-color: #38ace5;
 			.answers-inner {
 				width: 100%;
 
+				.mobile-overflow {
+					display: none;
+
+					@media #{$phone} {
+						display: block;
+						top: 0px;
+						width: 100%;
+					    height: 20px;
+					    position: absolute;
+					    z-index: 1000;
+					}
+				}
+
 				.mobile-hide {
 					@media #{$phone} {
 						display: none;
